<resources>
    <string name="title_menu">Warcraft Quiz</string>
    <string name="game">Простая игра</string>
    <string name="mods">Режимы</string>
    <string name="rating">Рейтинг</string>
    <string name="change_name">change name</string>
    <string name="user_name">Имя</string>
    <string name="set_name">Задать Имя</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="count_symbols">%s / %s</string>
</resources>
