<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/title_menu"
        android:textAppearance="@style/menu_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnMenuQuickPlay"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="360dp"
        android:background="@drawable/main_button"
        android:gravity="center"
        android:text="@string/game"
        android:textAppearance="@style/menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnMenuMods"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/main_button"
        android:gravity="center"
        android:text="@string/mods"
        android:textAppearance="@style/menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuQuickPlay" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnMenuRating"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/main_button"
        android:gravity="center"
        android:text="@string/rating"
        android:textAppearance="@style/menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuMods" />

    <ImageView
        android:id="@+id/ivMenuChangeName"
        android:layout_width="@dimen/pencil_width"
        android:layout_height="@dimen/pencil_height"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pencil_outline_menu"
        android:contentDescription="@string/change_name" />

    <TextView
        android:id="@+id/tvUserNameMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAppearance="@style/menu_change_name"
        android:layout_marginEnd="12dp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toStartOf="@+id/ivMenuChangeName"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>