<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="210dp"
    android:background="@drawable/bg_dialog_change_name">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangeNameSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/set_name"
        android:textAppearance="@style/change_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangeNameOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="13dp"
        android:text="@string/ok"
        android:textAppearance="@style/change_name_choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangeNameCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="13dp"
        android:text="@string/cancel"
        android:textAppearance="@style/change_name_choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etChangeNameInputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="94dp"
        android:textColor="@color/change_name"
        android:autofillHints="@string/user_name"
        android:textColorHighlight="@color/main_yellow"
        android:shadowColor="@color/main_yellow"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangeNameCountSymbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/count_symbols"
        app:layout_constraintEnd_toEndOf="@+id/etChangeNameInputName"
        app:layout_constraintTop_toBottomOf="@+id/etChangeNameInputName" />
</androidx.constraintlayout.widget.ConstraintLayout>